# lamma.cpp_UseFromRemote

./: .gitignore  README.md  come_api.py  pyproject.toml  server.py
src/: backend_server.py  load_balancer.py  start_backends.py
test/: simple_test.json  structure_name_test.json  test_load_balancer.py  test_structured_output.json
